todo: ginding in requst
